Use NULL to track dead vars instead of varc.
In preparation for removing varc in favor of direct access into vars.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 Eval2:
+* Replace uses of PUSH_VAR and DESCOPE with SET_VAR and equivalent using
+  absolute positions?
 * Determine size of data stack frame statically.
 * Add explicit source and target locations to all instructions.
 * Merge var and data stack frames into a single array.
