--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 Eval2:
-* Replace uses of PUSH_VAR and DESCOPE with SET_VAR and equivalent using
-  absolute positions?
+* Use explicit absolute positions instead of PushVar
+ - Replace let prep instr with REF_VALUE_INSTR
 * Determine size of data stack frame statically.
 * Add explicit source and target locations to all instructions.
 * Merge var and data stack frames into a single array.
