--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,16 @@
 Eval2:
 * Use explicit absolute positions instead of PushVar
+ - Specify frame index in RefValueInstr
+ - Make VPUSH_INSTR push a single variable instead of multiple.
+ - Specify frame index in VPUSH_INSTR.
+ - Specify frame index in FORK_INSTR?
+ - Specify frame index in STRUCT_IMPORT_INSTR?
 * Determine size of data stack frame statically.
 * Add explicit source and target locations to all instructions.
 * Merge var and data stack frames into a single array.
 * Do reference counting statically instead of dynamically where possible.
+* Can children clean themselves up when they finish now that they return their
+  result directly to their parent?
 
 Miscellaneous:
 * Don't duplicate evaluation of literal type per letter.
