--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,10 @@
 Eval2:
+* Double check we didn't mess up unused variable detection.
+ - Figure out why "Specify frame index in RefValueInstr." regressed
+   performance.
+ - Write a performance test to catch this case if possible.
+ - Record whether we access a variable separate from fixup indexes.
+ - Confirm performance regression is fixed.
 * Use explicit absolute positions instead of PushVar
  - Make VPUSH_INSTR push a single variable instead of multiple.
  - Specify frame index in VPUSH_INSTR.
