--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,9 @@
 Eval2:
-* Use explicit absolute positions instead of PushVar
- - Remove vars.size field in fble/eval.c, which should no longer be used by
-   anything.
-* Determine size of data stack frame statically.
-* Add explicit source and target locations to all instructions.
-* Merge var and data stack frames into a single array.
-* Do reference counting statically instead of dynamically where possible.
+* Merge PushVar and SetFrameIndex in compile.c?
+* Start moving things from data stack to vars.
+ - Use VPUSH if needed to get it to a var.
+ - Add explicit source and target locations to instructions.
+* Delete unused data stack.
 * Can children clean themselves up when they finish now that they return their
   result directly to their parent?
 
