--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,7 @@ Eval2:
   result directly to their parent?
 
 Miscellaneous:
-* [clean] Reorganize functiosn in fble/compile.c
+* [clean] Reorganize functions in fble/compile.c
 * Don't duplicate evaluation of literal type per letter.
 * Add test that the literal type must be a struct, not a union value.
 * Don't give duplicate error messages if the literal type is malformed.
