--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Eval2:
   result directly to their parent?
 
 Miscellaneous:
+* Add test that we don't hold on to a condition value while running the
+  selected branch of a union select expression.
 * [clean] Clean up how we specify dump_compile? It feels a little hacky at
   this point. Maybe write a separate executable that's capable of compiling
   and dumping? Is that better?
