Add obj field to STRUCT_IMPORT_EXPR.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,11 @@ Eval2:
  - Capture scope from locals instead of data.
  - FORK from locals instead of data.
  - PROC_INSTR should have a proc field instead of using the data stack.
- - STRUCT_IMPORT should come from locals instead of data stack.
  - PROC_VALUE_INSTR should return result to explicit location.
  - FORK should pass child args using statics instead of data stack.
  - Remove DataToLocal(LocalToData) from union select expression.
+   Hard, because all branches need to return to the same location. We may need
+   to add a MOVE instruction.
  - Remove DataToLocal(LocalToData) from poly expression.
  - Remove DataToLocal(LocalToData) from poly apply expression.
 * Delete unused data stack.
