--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,20 @@
 Eval2:
 * Replace DataToLocal calls with instructions that output directly to locals.
- - PROC_INSTR should have a proc field instead of using the data stack.
+ - PROC_INSTR should have a dest field instead of using the data stack.
 * Delete unused data stack.
 * Can children clean themselves up when they finish now that they return their
   result directly to their parent?
 
 Miscellaneous:
+* Is there a way to clean up compile.c, in terms of orders of setting fields
+  of instructions vs scopes vs locals? It all seems very confused to me.
 * Figure out some way to have different types for the same local
   Specifically for implementing poly apply and poly coercions.
-  
+* Is there a way to avoid emitting instructions after a return instruction?
 * Add test that we don't hold on to a condition value while running the
   selected branch of a union select expression.
+* Add test that we don't hold on to an exec binding expression longer than
+  necessary.
 * [clean] Clean up how we specify dump_compile? It feels a little hacky at
   this point. Maybe write a separate executable that's capable of compiling
   and dumping? Is that better?
