--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Miscellaneous:
+* Why is statics for Bit2X.fulladd! 3 long when only entry 0 is used?
 * Can children clean themselves up when they finish now that they return their
   result directly to their parent?
 * Is there a way to clean up compile.c, in terms of orders of setting fields
@@ -10,9 +11,6 @@ Miscellaneous:
   selected branch of a union select expression.
 * Add test that we don't hold on to an exec binding expression longer than
   necessary.
-* [clean] Clean up how we specify dump_compile? It feels a little hacky at
-  this point. Maybe write a separate executable that's capable of compiling
-  and dumping? Is that better?
 * [clean] Reorganize functions in fble/compile.c
 * Don't duplicate evaluation of literal type per letter.
 * Add test that the literal type must be a struct, not a union value.
